--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,23 @@
 spring.application.name=finflow
 
-# Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Database Configuration (use environment variables with defaults for local dev)
+spring.datasource.url=${DB_URL:jdbc:h2:mem:testdb}
+spring.datasource.username=${DB_USERNAME:sa}
+spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
+spring.jpa.database-platform=${DB_DIALECT:org.hibernate.dialect.H2Dialect}
 
 # JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Server Configuration
-server.port=8081
+server.port=${PORT:8081}
 
 # Thymeleaf Configuration
 spring.thymeleaf.cache=false
 
-# Plaid Configuration (commented out for now)
-# plaid.client-id=your-client-id
-# plaid.secret=your-secret
-# plaid.environment=sandbox
-
-# Enable hot reloading
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
+# H2 Console (only enabled for H2 database)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
