--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -22,7 +22,7 @@ COPY src src
 RUN ./mvnw clean package -DskipTests -Pprod
 
 # Production runtime stage
-FROM openjdk:17-jre-slim
+FROM openjdk:17-jdk-slim
 
 # Install curl for healthcheck
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
